fix(steps): fix responsive gap between cards

--- a/src/widgets/Steps/steps.scss
+++ b/src/widgets/Steps/steps.scss
@@ -21,7 +21,7 @@
 
   @media (min-width: 1440px) {
     flex-direction: row;
-    gap: 16px;
+    gap: 1%;
   }
 }
 
@@ -33,10 +33,11 @@
 
   @media (min-width: 768px) {
     flex-direction: row;
+    gap: 2%;
   }
 
   @media (min-width: 1440px) {
-    flex: 0 0 50%;
+    flex: 0 0 49.5%;
   }
 }
 
@@ -53,7 +54,7 @@
   gap: 16px;
 
   @media (min-width: 768px) {
-    flex: 0 0 50%;
+    flex: 0 0 49%;
   }
 
   @media (min-width: 1024px) {
